# ZeroMeta

./: LICENSE  README.md  app.py  metadata_remover.desktop  metadata_remover.json  metadata_remover.py  metadata_remover_desktop.py  metadata_remover_gui.py  pyproject.toml  requirements.txt
core/layer_manager/: installer.rs  loader.rs  mod.rs  registry.rs  sandbox.rs
layers/metadata_cleaner/: app.py
tauri/src/: index.html  main.js  styles.css
tauri/src-tauri/: tauri.conf.json
tauri/src/components/: Sidebar.js
tauri/src/pages/: HomePage.js  SettingsPage.js
