[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "zerometa"
version = "0.1.0"
description = "ZeroMeta - Privacy Assistant Application"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "flet>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.12b0",
    "isort>=5.10.1",
    "mypy>=0.910"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["zerometa*"]
exclude = ["tests*"]